initialized as cherotich

--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<!-- Write your HTML in this file -->
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>My job</title>
+    </head>
+    <h1>Game design</h1>
+    <body>
+    <p>game designing is the art of applying a design to create a game.</p>
+    <p>game desingning is a good path career especially if your talent is creativity based and have a love for adventure.</p>
+    <p>AS a gamer myself i truly enjoy this and i have never really worked ever since i started just pure bliss</p>
+</body>
+
+
+</html>
